figuring out UI intergraton

--- a/templates/results.html
+++ b/templates/results.html
@@ -6,7 +6,7 @@
 	<h1 style="text-align: center">
 		Results
 	</h1>
-	{% for key, value in query.iteritems() %}
+	{% for key, value in result.iteritems() %}
 		<h1 style="text-align: center">
 			{{ value }}
 		</h1>
