--- a/templates/results.html
+++ b/templates/results.html
@@ -6,9 +6,7 @@
 	<h1 style="text-align: center">
 		Results
 	</h1>
-	{% for key, value in result.iteritems() %}
 		<h1 style="text-align: center">
-			{{ value }}
+			value
 		</h1>
-	{% endfor %}
 {% endblock %}
