now engine is running locally

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,5 @@
 #imaginary_container{
-    margin-top:20%; /* Don't copy this */
+    margin-top:10%; /* Don't copy this */
 }
 .stylish-input-group .input-group-addon{
     background: white !important;
@@ -12,4 +12,8 @@
 .stylish-input-group button{
     border:0;
     background:transparent;
+}
+.list-group .list-group-item {
+	margin-left: 20%;
+	margin-right: 20%;
 }
