--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,8 @@
 </head>
 
 <body>
+	<h1 class="text-primary" style="text-align: center">Poki Index</h1>
+
 	<div id="footer">
 		{% block content %}
 			<div class="container">
