everything is up to date to the demo

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-	<h1 class="text-primary" style="text-align: center">Poki Index</h1>
+	<h1 class="text-primary" style="text-align: center">About Lei</h1>
 
 	<div id="footer">
 		{% block content %}
